crates/service/tests/rename/snapshots/features__rename__rename__block_def.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 3,
            "character": 11
          },
          "end": {
            "line": 3,
            "character": 17
          }
        },
        "newText": "$b"
      },
      {
        "range": {
          "start": {
            "line": 5,
            "character": 18
          },
          "end": {
            "line": 5,
            "character": 24
          }
        },
        "newText": "$b"
      },
      {
        "range": {
          "start": {
            "line": 6,
            "character": 16
          },
          "end": {
            "line": 6,
            "character": 22
          }
        },
        "newText": "$b"
      }
    ]
  }
}
