crates/service/tests/rename/snapshots/features__rename__rename__call.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 10
          },
          "end": {
            "line": 2,
            "character": 15
          }
        },
        "newText": "$f"
      },
      {
        "range": {
          "start": {
            "line": 3,
            "character": 14
          },
          "end": {
            "line": 3,
            "character": 19
          }
        },
        "newText": "$f"
      },
      {
        "range": {
          "start": {
            "line": 3,
            "character": 34
          },
          "end": {
            "line": 3,
            "character": 39
          }
        },
        "newText": "$f"
      },
      {
        "range": {
          "start": {
            "line": 5,
            "character": 11
          },
          "end": {
            "line": 5,
            "character": 16
          }
        },
        "newText": "$f"
      }
    ]
  }
}
