crates/service/tests/rename/snapshots/features__rename__rename__data_ref.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 8
          },
          "end": {
            "line": 2,
            "character": 13
          }
        },
        "newText": "$d"
      },
      {
        "range": {
          "start": {
            "line": 4,
            "character": 14
          },
          "end": {
            "line": 4,
            "character": 19
          }
        },
        "newText": "$d"
      }
    ]
  }
}
