crates/service/tests/rename/snapshots/features__rename__rename__dollar_only.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 8
          },
          "end": {
            "line": 2,
            "character": 13
          }
        },
        "newText": "$\"\""
      },
      {
        "range": {
          "start": {
            "line": 2,
            "character": 20
          },
          "end": {
            "line": 2,
            "character": 25
          }
        },
        "newText": "$\"\""
      }
    ]
  }
}
