crates/service/tests/rename/snapshots/features__rename__rename__elem_def.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 8
          },
          "end": {
            "line": 2,
            "character": 13
          }
        },
        "newText": "$e"
      },
      {
        "range": {
          "start": {
            "line": 4,
            "character": 14
          },
          "end": {
            "line": 4,
            "character": 19
          }
        },
        "newText": "$e"
      }
    ]
  }
}
